tests/error/complex_invalid_im.gw
// [contains] in imaginary component of complex value
 #(0, NULL);
